Fix teaser right align is not aligned to right side of page

--- a/src/theme/blocks/_teaser.scss
+++ b/src/theme/blocks/_teaser.scss
@@ -59,6 +59,7 @@
 
       .image-wrapper {
         margin-left: 20px;
+        margin-right: 0px;
 
         @media only screen and (max-width: $largest-mobile-screen) {
           margin-bottom: 26px;
